atualização para o estilo da fomenta, adição de uma lista suspensa, botão, inicio do cadastro de evento, mudança de banner e cores

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,16 +1,20 @@
  
 
  :root{
-    --color-Primary: rgb(255, 255, 255);
+    --color-Primary: #74afaa;
 
  }
 
 .banner {
-    background-color: var(--color-Primary) ;
-    text-align: center;
+    background-color: #74afaa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 .Banner img {
     max-width: 100%;
+    
+    
 }
